<resources>
    <string name="app_name">Aiden Memo</string>

    <string name="all_fail_get_permission">권한 사용 실패</string>
    <string name="all_add">추가</string>
    <string name="all_cancel">취소</string>

    <string name="main_no_memo">메모가 없습니다\n우측 하단의 메모 추가버튼으로\n메모를 추가하세요</string>
    <string name="main_add_memo">메모\n추가</string>

    <string name="write_title">메모 제목</string>
    <string name="write_body">메모 내용</string>
    <string name="write_save">저장 하기</string>
    <string name="write_select_image">이미지 선택\n(최대 8장)</string>
    <string name="write_select_image_complete">선택 완료</string>
    <string name="write_select_image_no_select">No Image</string>
    <string name="write_add_link">이미지 링크 추가</string>
    <string name="write_hint_link">이미지 링크(http://..)</string>
    <string name="write_no_title">제목을 1자 이상 적어주세요</string>
    <string name="write_no_body">본문을 1자 이상 적어주세요</string>
    <string name="write_can_not_save">메모를 저장할 수 없습니다\n다시 시도해주세요</string>
    <string name="write_save_done">메모 저장 완료</string>

    <string name="detail_delete_memo">메모 삭제</string>
    <string name="detail_update_memo">메모 수정</string>
    <string name="detail_delete_success">삭제 성공</string>
    <string name="detail_delete_fail">삭제 실패. 다시 시도해주세요</string>

</resources>
